# special-spoon

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CodeCounter.py  LICENSE  README.md  buildme.py  clocfile.txt  launch.vs.json  notes.txt
Sandbox/: CMakeLists.txt  DemoMenu.cpp  DemoMenu.h
Sandbox/assets/Textures/lic/: player lic.txt  zombie lic.txt
Sandbox/assets/scene/: Arena_data.json  Arena_res.json  MainMenu_data.json  MainMenu_res.json  scene_manifest.json
Sandbox/data/scene/: Arena_data.json  Arena_res.json  MainMenu_res.json  scene_manifest.json
Sandbox/src/: Background.h  DemoLayer.cpp  DemoLayer.h  DemoMenu.cpp  DemoMenu.h  DemoScene.cpp  DemoScene.h  DemoZombie.cpp  DemoZombie.h  MainMenuScene.cpp  MainMenuScene.h  Player.cpp  Player.h  Sandbox.cpp  SceneTransistion.cpp  SceneTransition.h  TestEntity.h  TestLayer.cpp  TestLayer.h  apptest.cpp
Sandbox/src/ECS/: CustomCompLoader.h  CustomSystemLoader.h
Sandbox/src/ECS/Component/: MovementComp.h  PatrolComp.h  PlayerComp.h
Sandbox/src/ECS/Component/Combat/: AttackComp.h  Hit-Hurt.h
Sandbox/src/ECS/System/: AttackSystem.h  MovementSystem.h  PatrolSystem.h  PlayerController.h
Special-Spoon/: CMakeLists.txt
Special-Spoon/src/: Spoon.h
Special-Spoon/src/Core/: ActionQueue.h  Application.cpp  Application.h  CMakeLists.txt  ComponentArray.h  ComponentLoaders.cpp  ComponentLoaders.h  Core.h  EntityManager.h  EntryPoint.h  ProjectManager.cpp  ProjectManager.h  Renderer.h  ResourceManager.h  SceneManager.cpp  SceneManager.h
Special-Spoon/src/Core/EntityManager/: EntityManager.cpp  EntityManager.h  EntityManager.inl
Special-Spoon/src/Core/Registers/: ActionRegistry.h
Special-Spoon/src/Core/Registers/Component/: ComponentRegistry.cpp  ComponentRegistry.h
Special-Spoon/src/Core/Registers/System/: SystemRegistry.cpp  SystemRegistry.h
Special-Spoon/src/Core/ResourceManager/: ResourceManager.cpp  ResourceManager.h  ResourceManager.inl
Special-Spoon/src/Core/ResourceManager/SystemFont/Jersey_10/: SystemFont.h
Special-Spoon/src/Core/Serialization/: ComponentLoaders.cpp  ComponentLoaders.h  JsonTypeDefs.h  Serializer.cpp  Serializer.h  SystemLoaders.cpp  SystemLoaders.h
Special-Spoon/src/ECS/: CMakeLists.txt  ECS.h  Entity.h  UUID.h
Special-Spoon/src/ECS/Components/: Component.h  InputComp.cpp  InputComp.h  PhysicsComp.h  StateActionComp.h  StatusComp.h  TransformComp.cpp  TransformComp.h
Special-Spoon/src/ECS/Components/Animation/: AnimationComp.h  AnimationData.h  BlinkComp.h  FadeComp.h
Special-Spoon/src/ECS/Components/Render/: ColorComp.h  RenderLayer.h  SpriteComp.cpp  SpriteComp.h  TextComp.h
Special-Spoon/src/Editor/: AnimationTool.cpp  AnimationTool.h  CMakeLists.txt  Editor.cpp  Editor.h  SystemsMenu.cpp  TextureRectTool.h  Viewport.cpp  Viewport.h
Special-Spoon/src/Editor/Blueprints/: Blueprint.h
Special-Spoon/src/Editor/Menus/: CMakeLists.txt  EntityMenus.cpp  EntityMenus.h  ResourceMenus.cpp  ResourceMenus.h  SceneMenus.cpp  SceneMenus.h  SystemsMenu.cpp  SystemsMenu.h
Special-Spoon/src/Editor/Tools/: AnimationTool.cpp  AnimationTool.h  TextureRectTool.h
Special-Spoon/src/Editor/Utils/: EditorSettings.h  Helpmarker.h  Viewport.cpp  Viewport.h
Special-Spoon/src/System/: AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  InputSystem.cpp  InputSystem.h  StateSystem.cpp  StateSystem.h  System.h  SystemLoaders.cpp  SystemLoaders.h  SystemManager.h
Special-Spoon/src/System/Physics/: PhysicsSystem.h  QuadTree.cpp
Special-Spoon/src/Utils/: CMakeLists.txt  Logger.h  UserConfig.cpp  UserConfig.h
cmake/: special-spoonConfig.cmake
docs/: CODE_OF_CONDUCT.md  README.md  notes.txt
scripts/: CodeCounter.py  buildme.py
special-spoon-core/: CMakeLists.txt
special-spoon-core/Example/: SceneManifest.json
special-spoon-core/src/: Application.cpp  Application.h  Core.h  Entity.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MemoryUtils.h  ResourceManager.h  Scene.cpp  Scene.h  Spoon.h
special-spoon-core/src/Core/: Application.cpp  Application.h  CMakeLists.txt  ComponentArray.h  ComponentLoaders.cpp  ComponentLoaders.h  Core.h  EntityManager.h  EntryPoint.h  Renderer.h  ResourceManager.h  SceneManager.cpp  SceneManager.h
special-spoon-core/src/ECS/: CMakeLists.txt  Component.cpp  Component.h  ECS.h  Entity.h  Entity.inl  PhysComp.h  SpriteComp.h  TextComp.cpp  TextComp.h  TransComp.h
special-spoon-core/src/ECS/Components/: Component.h  InputComp.h  PhysicsComp.h  StatusComp.h  TransformComp.h
special-spoon-core/src/ECS/Components/Animation/: AnimationComp.h  AnimationData.h  BlinkComp.h  FadeComp.h
special-spoon-core/src/ECS/Components/Render/: ColorComp.h  SpriteComp.h  TextComp.h
special-spoon-core/src/ECS/Node/: Entity.h  Node.cpp  Node.h
special-spoon-core/src/Editor/: Editor.cpp  Editor.h
special-spoon-core/src/Physics/: CollisionDetector.cpp  CollisionDetector.h  PhysicsManager.h  QuadTree.cpp  QuadTree.h
special-spoon-core/src/Scene/: Entity.h  Node.cpp  Node.h  ResourceManager.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
special-spoon-core/src/System/: AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  ComponentArray.h  EntityManager.h  InputSystem.h  PhysicsSystem.h  RenderSystem.h  StateSystem.h  System.h  SystemLoaders.cpp  SystemLoaders.h  SystemManager.h
special-spoon-core/src/System/Physics/: PhysicsSystem.h  QuadTree.cpp  QuadTree.h
special-spoon-core/src/Utils/: CMakeLists.txt  KeyMappings.h  Logger.h  Macros.h
special-spoon/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  Spoon.h  Test.cpp  Test.h
